# ergo

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt
src/: CMakeLists.txt  clipboard.cpp  clipboard.h  gettext.cpp  gettext.h  plugin.cpp  qmldir.in  units.cpp  units.h  unitythemeiconprovider.cpp  unitythemeiconprovider.h
src/Ergo/: Icon.qml
src/tests/: CMakeLists.txt  test-clipboard.cpp  test-units.cpp  test-unitythemeiconprovider.cpp
